--- a/css/utilities/icon.css
+++ b/css/utilities/icon.css
@@ -22,11 +22,21 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.interface-button .material-icons {
+    vertical-align: middle;
+}
 
 /* Rules for using icons as black on a light background. */
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
 .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
 
+/*.material-icons.md-dark { color: rgba(163, 163, 163, 1); }*/
+/*.material-icons.md-dark.md-inactive { color: rgba(163, 163, 163, 1); }*/
+
 /* Rules for using icons as white on a dark background. */
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+
+/* Rules for sizes. */
+.material-icons.md-18 { font-size: 18px; }
+
