--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -130,6 +130,12 @@
         #sequence-input-cmp .controls .button-container .interface-button span {
           display: inline-block;
           width: 150px; }
+        #sequence-input-cmp .controls .button-container .interface-button .custom-file-upload {
+          display: inline-block;
+          padding: 6px 12px;
+          cursor: pointer; }
+          #sequence-input-cmp .controls .button-container .interface-button .custom-file-upload input[type="file"] {
+            display: none; }
       #sequence-input-cmp .controls .button-container .interface-button:first-child {
         border-left: 1px solid black; }
 
@@ -179,7 +185,6 @@
     #result-cmp #result-sequences .tab-result-sequence {
       border-bottom: dashed lightgrey 2px;
       margin: 10px 0 5px 0;
-      width: 4000px;
       font-family: "Courier New", "monospace";
       font-size: 23px;
       background-color: #ffffff;
