-fixed bug with seq width on zoom -fixed bug with seq width on tab delete
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -256,7 +256,7 @@
     overflow-x: scroll;
 
     background-color: white;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
     border: solid 2px $sequence-input-borders;
     border-left: none;
     border-bottom: none;
