--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -178,7 +178,7 @@
     left: 0;
     overflow-x: scroll;
     background-color: white;
-    border-radius: 5px;
+    border-top-right-radius: 5px;
     border: solid 2px black;
     border-left: none;
     border-bottom: none; }
