-table: url to HOCOMOCO added to motif ID -table: hidden columns names was changed -table: added hidden column "Gene name" -chosen motifs: url to HOCOMOCO added to name
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -13,6 +13,16 @@ body {
   margin: 0;
   background-color: #ededf2; }
 
+td a:link,
+.motif-title a:link {
+  color: #0645AD;
+  text-decoration: none; }
+
+td a:visited,
+.motif-title a:visited {
+  color: #0645AD;
+  text-decoration: none; }
+
 .interface-area {
   margin-left: 0;
   margin-top: 80px; }
