--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -67,7 +67,7 @@ ul {
   .nav > .search-container {
     padding: 10px 24px 10px 10px;
     margin-left: 0; }
-    .nav > .search-container > #search {
+    .nav > .search-container > #motif-search {
       display: inline-block;
       width: 320px;
       padding-left: 5px;
