--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -8,7 +8,22 @@
   //box-shadow: 0 1px 1px 0 $topNav-primaryBoxShadow;
   border: 1px solid $sequence-input-borders;
 
-  min-width: 500px;
+  min-width: 600px;
+
+  #legend-container {
+    border-top: none;
+    border-bottom: 1px solid $sequence-input-borders;
+    min-height: 26px;
+
+    .absolute {
+      position: absolute;
+    }
+
+    .feature {
+      margin: 0 4px 0 4px;
+      padding: 0 4px 0 4px;
+    }
+  }
 
   .suggestion {
     min-height: 46px;
@@ -20,13 +35,19 @@
     .feature {
       display: inline;
       vertical-align: middle;
+      padding: 4px;
+      margin: 4px;
     }
 
     .second {
       position: absolute;
       left: 250px;
-      padding: 4px;
-      margin: 4px;
+      max-width: 240px;
+    }
+
+    .third {
+      position: absolute;
+      left: 500px;
       max-width: 240px;
     }
   }
