--- a/css/UIComponents.scss
+++ b/css/UIComponents.scss
@@ -185,6 +185,7 @@
     .button-container{
       display: inline-block;
       background-color: $main-bg-color;
+      float: right;
 
 
       .interface-button {
