--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -86,19 +86,20 @@ input[type="file"] {
   display: none; }
 
 .full-screen {
-  line-height: 31.5px !important;
   min-height: 332px !important;
   word-break: break-all;
   border-bottom: none !important; }
 
-#result-sequences .flattened {
-  line-height: 70px !important;
-  height: 70px !important;
-  word-wrap: normal; }
-#result-sequences .flattened:first-of-type {
-  margin-top: 0px !important;
-  line-height: 68px !important;
-  height: 68px !important; }
+#result-sequences {
+  /* .flattened:first-of-type {
+     margin-top: 0px !important;
+     line-height: $resultTab-height - 2px !important;
+     height: $resultTab-height - 2px !important
+   }*/ }
+  #result-sequences .flattened {
+    line-height: 70px !important;
+    height: 70px !important;
+    word-wrap: normal; }
 
 .hidden {
   display: none !important; }
