--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -27,6 +27,11 @@ ul {
   height: 40px;
   /* Dropdown */
   /* Search input */ }
+  .nav a {
+    color: black;
+    font-weight: 500;
+    text-align: center;
+    top: 5px; }
   .nav > li {
     float: left;
     display: inline-block;
@@ -54,7 +59,6 @@ ul {
       position: absolute;
       display: none;
       width: 180px;
-      min-width: 150px;
       box-shadow: 0 1px 1px 0 black;
       background-color: #dadada;
       z-index: 1;
@@ -65,8 +69,7 @@ ul {
         color: black;
         text-decoration: none; }
   .nav > .search-container {
-    padding: 10px 24px 10px 10px;
-    margin-left: 0; }
+    padding: 10px 24px 10px 10px; }
     .nav > .search-container > #motif-search {
       display: inline-block;
       width: 320px;
@@ -91,8 +94,6 @@ ul {
   display: block; }
 
 .nav > li > .sub-nav > li:hover a {
-  background: #ff8358;
-  box-shadow: 0 1px 1px 0 #ff8358;
   color: #dadada;
   border-radius: 5px; }
 
