--- a/css/navigationTopBar.scss
+++ b/css/navigationTopBar.scss
@@ -31,6 +31,13 @@ ul {
 
 .nav {
   height: $topNav-navLineHeight;
+  a {
+    color: $topNav-primaryMenuText;
+    font-weight: 500;
+    text-align: center;
+    top: 5px
+  }
+
   /* Dropdown */
   > li {
     float: left;
@@ -66,7 +73,6 @@ ul {
       position: absolute;
       display: none;
       width: 180px;
-      min-width: $topNav-subNavMinWidth;
       box-shadow: 0 1px 1px 0 $topNav-primaryBoxShadow;
       background-color: $topNav-primaryMenuBackground;
       z-index: 1;
@@ -84,7 +90,6 @@ ul {
   /* Search input */
   > .search-container {
     padding: 10px 24px 10px 10px;
-    margin-left: $sideNav-initialWidth * 0.90;
 
     > #motif-search {
       display: inline-block;
@@ -122,8 +127,6 @@ ul {
 }
 
 .nav > li > .sub-nav > li:hover a{
-  background: $topNav-secondaryMenuBackground;
-  box-shadow: 0 1px 1px 0 $topNav-secondaryBoxShadow;
   color: $topNav-primaryMenuBackground;
   border-radius: 5px;
 }
