--- a/css/primaryComponentsSettings.css
+++ b/css/primaryComponentsSettings.css
@@ -24,11 +24,10 @@ td a:visited,
   text-decoration: none; }
 
 .interface-area {
-  margin-left: 0;
   margin-top: 80px; }
 
 #manual-seq-input {
-  background-color: #ffffff;
+  background-color: white;
   border: 2px solid black;
   border-radius: 5px;
   margin-left: 5px; }
@@ -66,10 +65,10 @@ td a:visited,
   text-decoration: none;
   outline: none; }
 
-.interface-button:hover {
+.interface-button:hover, .material-icons {
   color: black; }
 
-.interface-button:active {
+.interface-button:active, .material-icons {
   color: #a3a3a3; }
 
 input[type="file"] {
