-majority of buttons are with ID now -index: now result height is fully controlled through "variables: resultTab-height"
Signed-off-by: Eugene Rumynskiy <erumynskiy@gmail.com>

--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -154,8 +154,9 @@
     z-index: 2;
     background-color: #ededf2; }
     #result-cmp #result-tabs .tab-result {
-      height: 70px;
-      line-height: 70px;
+      background-color: #ededf2;
+      height: 90px;
+      line-height: 90px;
       margin: 5px 0 10px 0;
       border: 2px solid black;
       border-top-left-radius: 5px;
@@ -194,6 +195,11 @@
       background-color: #ffffff; }
       #result-cmp #result-sequences .tab-result-sequence .digits {
         opacity: 0.3; }
+        #result-cmp #result-sequences .tab-result-sequence .digits span {
+          border-radius: 2px;
+          vertical-align: -4px;
+          text-align: center;
+          overflow: hidden; }
     #result-cmp #result-sequences .flattened .digits {
       position: static;
       height: 20px;
@@ -201,8 +207,8 @@
     #result-cmp #result-sequences .flattened .sequence {
       position: static;
       margin-top: 0 !important;
-      height: 50px;
-      line-height: 50px; }
+      height: 70px;
+      line-height: 70px; }
     #result-cmp #result-sequences .flattened .locked.digits {
       position: absolute; }
     #result-cmp #result-sequences .flattened .locked.sequence {
@@ -210,12 +216,11 @@
       padding-top: 20px; }
     #result-cmp #result-sequences .full-screen .digits {
       position: static;
-      margin-top: -50px;
-      line-height: 105px; }
+      margin-top: -22.5px;
+      line-height: 67.5px; }
     #result-cmp #result-sequences .full-screen .sequence {
       position: static;
-      padding-top: 50px;
-      line-height: 101px; }
+      line-height: 67.5px; }
   #result-cmp #result-sequences:empty {
     display: none; }
   #result-cmp #result-slider {
