--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -44,10 +44,11 @@ $sequence-input-borders: black;
 
 //sequenceInput
 $resultTab-width: 90px;
-$resultTab-height: 70px;
+$resultTab-height: 90px;
 
 //global features
 $border-radius: 5px;
 
 //tabs
 $current-tab-bg: white;
+$tab-bg: $secondaryColor;
