--- a/css/controlElements.scss
+++ b/css/controlElements.scss
@@ -96,7 +96,7 @@ Example: <a href="#" class="lock">
   right: 4px;
   
   display: inline-block;
-  margin-top: 35px;
+  margin-top: $resultTab-height - 24px - 8px;
 
   width: 24px;
   height: 24px;
