--- a/css/controlElements.css
+++ b/css/controlElements.css
@@ -78,6 +78,18 @@ Example: <a href="#" class="lock">
 */
 .tab-result .lock {
   position: absolute;
+  right: 32px;
+  display: inline-block;
+  margin-top: 58px;
+  width: 24px;
+  height: 24px;
+  line-height: 24px; }
+
+/*Copy element
+Example: <a href="#" class="copy-button">
+*/
+.tab-result .copy-tab {
+  position: absolute;
   right: 4px;
   display: inline-block;
   margin-top: 58px;
