--- a/css/pSlider.scss
+++ b/css/pSlider.scss
@@ -29,7 +29,7 @@
 
         position: relative;
         left: 5px;
-        border: 1px solid $sequence-input-borders;
+        border: $thin solid $borderColor;
         border-radius: 5px;
 
         color:black;
