--- a/css/utilities/variables.scss
+++ b/css/utilities/variables.scss
@@ -49,3 +49,8 @@ $border-radius: 5px;
 //tabs
 $current-tab-bg: white;
 $tab-bg: $secondaryColor;
+
+//borders
+$borderColor: black;
+$thick: 2px;
+$thin: 1px;
