--- a/css/UIComponents.css
+++ b/css/UIComponents.css
@@ -91,11 +91,12 @@
   background-color: white;
   border: 2px solid black;
   border-radius: 5px;
-  margin-left: 5px; }
+  margin: 5px; }
   #manual-seq-input textarea {
     border: solid 2px white;
     font-family: "Courier New", "Times New Roman";
     font-size: 23px;
+    resize: none;
     width: 100%;
     line-height: 25px;
     height: 200px; }
@@ -109,7 +110,7 @@
       margin-left: 5px; }
       #manual-seq-input .input-controls .interface-button span {
         display: inline-block;
-        min-width: 100px; }
+        min-width: 120px; }
         #manual-seq-input .input-controls .interface-button span .material-icons {
           float: right; }
 
