--- a/css/primaryComponentsSettings.scss
+++ b/css/primaryComponentsSettings.scss
@@ -52,9 +52,8 @@ td a:visited,
   font-size: 14px;
   white-space: nowrap;
   overflow: hidden;
-
   text-decoration: none;
-  outline: none;
+  text-align: center;
 }
 .interface-button:hover, .material-icons{
   color: $icon-hover-color;
